working on footer style, fixinf X-axis overflow on mobile

--- a/public/css/appCustomStyles.css
+++ b/public/css/appCustomStyles.css
@@ -753,15 +753,13 @@ section .service-container .service-item p {
 footer .dirt-background {
   background-image: url(/img/dirt.png);
   background-size: cover;
-  background-position: center;
   background-repeat: no-repeat;
   height: 15rem;
-  margin-top: 55rem;
+  width: 100%;
 }
 
 @media (min-width: 1200px) {
   footer .dirt-background {
-    margin-top: 464px;
     width: 100%;
   }
 }
